# ILAB-ASKDB

db-insights-backend-main/: .gitignore  README.md  docker-compose.yml  how-to.txt  pyproject.toml  report.md  requirements.txt
db-insights-backend-main/app/: __init__.py  main.py
db-insights-backend-main/app/config/: config.py  dependencies.py  email_config.py
db-insights-backend-main/app/crews/crew_nlp_to_sql/: nlp_to_sql_crew.py
db-insights-backend-main/app/crews/crew_nlp_to_sql/config/: agents.yaml  tasks.yaml
db-insights-backend-main/app/data/questions/: Questions_to_Paste.txt
db-insights-backend-main/app/data/responses/: generated_sql.json  rewritten_query.txt  sql_qa_report.json
db-insights-backend-main/app/embeddings/: generate_embeddings.py
db-insights-backend-main/app/models/: chat.py  sql_qa_report.py  sql_response.py
db-insights-backend-main/app/routers/: chat.py  database_route.py  email.py
db-insights-backend-main/app/schemas/: schema.py
db-insights-backend-main/app/scripts/db_scripts/: AskDB_Create_Tables.sql  create_and_populate_db.py
db-insights-backend-main/app/services/: crew_service.py
db-insights-backend-main/app/tools/: retrieval_tool.py  sql_qa_tool.py  sql_tools.py
db-insights-backend-main/app/utils/: email_utils.py
