[project]
name = "oneaskdb"
version = "0.1.0"
description = "oneaskdb using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.74.2,<1.0.0",
    "psycopg2-binary>=2.9.10",
    "sqlparse",
]

[project.scripts]
oneaskdb = "oneaskdb.main:run"
run_crew = "oneaskdb.main:run"
train = "oneaskdb.main:train"
replay = "oneaskdb.main:replay"
test = "oneaskdb.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oneaskdb"]

[tool.crewai]
type = "crew"
